@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: datafile.c,v 1.140 2008/02/24 19:49:35 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: datafile.c,v 1.141 2008/02/25 03:17:57 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - datafile.c */
@@ -1030,7 +1030,7 @@ initialize_use_spec()
 	    free_at(use_spec[i].at);
 	    use_spec[i].at = NULL;  /* no expression */
 	}
-	df_axis[i] = -1; /* no timefmt for this output column */
+	df_axis[i] = NO_AXIS; /* no timefmt for this output column */
     }
 }
 
@@ -2020,7 +2020,7 @@ df_readascii(double v[], int max)
 			}
 
 			/* Check for timefmt string generated by a function */
-			if ((df_axis[output] != -1)
+			if ((df_axis[output] != NO_AXIS)
 			   && axis_array[df_axis[output]].is_timedata) {
 			    struct tm tm;
 			    if (gstrptime(a.v.string_val,
@@ -2042,7 +2042,7 @@ df_readascii(double v[], int max)
 		    v[output] = df_datum;       /* using 0 */
 		} else if (column <= 0) /* really < -2, but */
 		    int_error(NO_CARET, "internal error: column <= 0 in datafile.c");
-		else if ((df_axis[output] != -1)
+		else if ((df_axis[output] != NO_AXIS)
 			 && (axis_array[df_axis[output]].is_timedata)) {
 		    struct tm tm;
 		    if (column > df_no_cols ||
@@ -5066,9 +5066,8 @@ Last point in the binary file did not match the specified `using` columns");
 		} else if (column == 0) {
 		    v[output] = df_datum;
 		} else if (column <= 0)
-		    int_error(NO_CARET, "\
-internal error: unkown column type");
-		else if ((df_axis[output] != -1)
+		    int_error(NO_CARET, "internal error: unkown column type");
+		else if ((df_axis[output] != NO_AXIS)
 			 && (axis_array[df_axis[output]].is_timedata)) {
 		    struct tm tm;
 			
